<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.kekx</groupId>
    <artifactId>LOOM-Scientific-Paper</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>LOOM-Scientific-Paper</name>
    <description>LOOM-Scientific-Paper</description>

    <packaging>jar</packaging>

    <properties>
        <java.version>19</java.version>
        <maven.version>3.8.6</maven.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>

    </properties>


    <build>
        <pluginManagement>
            <plugins>
                        <plugin>
                            <groupId>org.asciidoctor</groupId>
                            <artifactId>asciidoctor-maven-plugin</artifactId>
                            <version>1.5.8</version>
                            <executions>
                                <execution>
                                    <id>generate-pdf</id>
                                    <phase>prepare-package</phase>
                                    <goals>
                                        <goal>process-asciidoc</goal>
                                    </goals>
                                    <configuration>
                                        <backend>pdf</backend>
                                        <sourceDirectory>paper</sourceDirectory>
                                        <outputDirectory>target/generated-docs/content</outputDirectory>
                                        <imagesDir>content/images/</imagesDir>

                                    </configuration>
                                </execution>
                            </executions>
                            <dependencies>
                                <!-- Required for PDF output -->
                                <dependency>
                                    <groupId>org.asciidoctor</groupId>
                                    <artifactId>asciidoctorj-pdf</artifactId>
                                    <version>1.5.0-beta.5</version>
                                </dependency>
                            </dependencies>
                        </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <compilerArgs>
                            <arg>--enable-preview</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>19</source>
                    <target>19</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.asciidoctor</groupId>
                <artifactId>asciidoctor-maven-plugin</artifactId>
            </plugin>
        </plugins>

    </build>
</project>
